objects/QBOList__c.object
<CustomObject>
    <fields>
        <fullName>ProductShortname__c</fullName>
        <label>ProductShortname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Productname__c</fullName>
        <label>Productname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QBOShort__c</fullName>
        <label>QBOShort</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>